# vrp-solver

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: a_v1_benchmark_tutorial.ipynb
scratch/: direct_topup_v212.py  highs_quantity_max-delivered_9.xml  highs_quantity_min-delivered_10.xml  insert_109_v212.py  insert_callins_v212.py  insert_split_109_v212.py  inspect_selected_v212.py  multi_callin_v212.py  reorder56_reloc312_25.xml  repair_109_recovery_v212.py  replace_callins_v212.py  replace_neighborhood_v212.py  replace_top_points_v212.py  session_notes.md  split316_displace_13.xml  split_residual_tanks_v212.py  transplant_v212.py  triple_replace_v212.py
scratch/b_v2_direct_topup/V2.12/: best.xml
scratch/b_v2_insert_callins/V2.12/: best.xml
scratch/b_v2_split_residual_tanks/V2.12/: best.xml
scripts/: build_b_v2.py  compare_a_v1.py  improve_a_v1.py
src/vrp_solver/: analysis.py  cli.py  highs_repair.py
src/vrp_solver/solver/: alns.py  column_loop.py  highs_selector.py  ml_priors.py  robust_batch.py  rolling_cg.py  targeted_rescue.py
tests/: test_a_instance_claims.py  test_backtest.py  test_build_b_v2_script.py  test_compare_a_v1_script.py  test_gurobi_selector.py  test_real_world_robust.py  test_robust_batch.py  test_rolling_cg.py  test_route_swap.py  test_scenario.py
