[build-system]
requires = ["hatchling", "hatch-cython"]
build-backend = "hatchling.build"

[project]
name = "vrp_solver"
version = "0.1.0"
description = "A standalone column generation and ALNS solver for the ROADEF 2016 Inventory Routing Problem."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Graydon Snider" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "lxml>=4.6",
    "scikit-learn>=1.0",
    "highspy>=1.5",
]

[project.optional-dependencies]
gurobi = [
    "gurobipy"
]

[project.scripts]
vrp-solver = "vrp_solver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vrp_solver"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
directives = { boundscheck = false, wraparound = false, language_level = "3" }
