[build-system]
requires = ["setuptools>=61.0", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "vrp_solver"
version = "0.1.0"
description = "A standalone column generation and ALNS solver for the ROADEF 2016 Inventory Routing Problem."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Graydon Snider" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "lxml>=4.6",
    "scikit-learn>=1.0",
    "highspy>=1.5",
    "matplotlib>=3.5",
    "scipy>=1.8",
    "alns>=6.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.31.0",
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
gurobi = [
    "gurobipy"
]

[project.scripts]
vrp-solver = "vrp_solver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["vrp_solver", "vrp_solver.solver"]
